...
                    <Pressable
                        onPress={() =>
                            navigation.navigate("AddWalletSelectionScreen", {
                                addWalletStartScreenName: "HomeScreen",
                            })
                        }
                        testID="addWalletButton"
                    >
                        <FontAwesomeIcon icon={fasCirclePlusSolid} style={styles.addWalletIcon} size={22} />
                    </Pressable>
                </HStack>
                <WalletsList navigation={navigation} showCurrencyTotals={true} isSettingsTab={false} />
            </VStack>
...
