...
                    </Pressable>
                    <Text size={"subheadline"} fontWeight={"semibold"}>
                        Documents
                    </Text>
                </VStack>
            </HStack>
            <HStack style={styles.transactionBox} testID="transactionsListHeader">
                <Text size={"title3"} fontWeight={"semibold"} style={styles.transactions}>
                    Transactions
                </Text>
                {transactions.length !== 0 && (
                    <Pressable
                        testID="transactionsListButton"
                        onPress={() =>
                            navigation.navigate("TransactionsListScreen", {
                                transactions: [...transactions],
                                wallet,
                                displaySeparation: true,
                            })
...
