...

function SortTransactionListComponent({ sortType, setSortType }: Props) {
    const { isOpen, onOpen, onClose } = useDisclose();

    return (
        <>
            <Pressable onPress={onOpen} style={{ paddingRight: 4.5 }} testID="sortTransactionsButton">
                <FontAwesomeIcon icon={faSort} size={22} />
            </Pressable>
            <Actionsheet isOpen={isOpen} onClose={onClose}>
                <Actionsheet.Content>
                    <HStack style={styles.headerStack}>
                        <Text style={styles.resetStyleInvisible}>Reset</Text>
...
                        <Actionsheet.Item>
                            <Radio value="sortDateNewest" testID="newestFirstOption">
                                Sort by date: newest first
                            </Radio>
                        </Actionsheet.Item>
                        <Actionsheet.Item>
                            <Radio value="sortDateOldest" testID="oldestFirstOption">
                                Sort by date: oldest first
                            </Radio>
                        </Actionsheet.Item>
                        <Actionsheet.Item>
                            <Radio value="sortAmountHighest" testID="highestFirstOption">
                                Sort by amount: highest first
...
